@@ -80,4 +80,244 @@ public static <S> ServiceLoader<S> load(Class<S> service) {
 [详细](https://mp.weixin.qq.com/s/_AKQs-xXDHlk84HbwKUzOw)
 
 
+# jvm调优命令
 
+[详细](https://www.cnblogs.com/ityouknow/p/5714703.html)
+
+## jps
+JVM Process Status Tool,显示指定系统内所有的HotSpot虚拟机进程。
+
+### 命令格式
+jps [options] [hostid]
+
+### option参数
+- l : 输出主类全名或jar路径
+- q : 只输出LVMID
+- m : 输出JVM启动时传递给main()的参数
+- v : 输出JVM启动时显示指定的JVM参数
+
+其中[option]、[hostid]参数也可以不写。
+
+### 示例
+```js
+$ jps -l -m
+  28920 org.apache.catalina.startup.Bootstrap start
+  11589 org.apache.catalina.startup.Bootstrap start
+  25816 sun.tools.jps.Jps -l -m
+```
+
+## jstat
+jstat(JVM statistics Monitoring)是用于监视虚拟机运行时状态信息的命令，它可以显示出虚拟机进程中的类装载、内存、垃圾收集、JIT编译等运行数据。
+
+### 命令格式
+jstat [option] LVMID [interval] [count]
+
+### 参数
+- [option] : 操作参数
+- LVMID : 本地虚拟机进程ID
+- [interval] : 连续输出的时间间隔
+- [count] : 连续输出的次数
+
+
+### option 参数总览
+| Option |	Displays… |
+| ---- | ---- |
+|class	|class loader的行为统计。Statistics on the behavior of the class loader.|
+|compiler	| HotSpt JIT编译器行为统计。Statistics of the behavior of the HotSpot Just-in-Time compiler.|
+|gc	|垃圾回收堆的行为统计。Statistics of the behavior of the garbage collected heap.|
+|gccapacity	|各个垃圾回收代容量(young,old,perm)和他们相应的空间统计。Statistics of the capacities of the generations and their corresponding spaces.|
+|gcutil	|垃圾回收统计概述。Summary of garbage collection statistics.|
+|gccause|	垃圾收集统计概述（同-gcutil），附加最近两次垃圾回收事件的原因。Summary of garbage collection statistics (same as -gcutil), with the cause of the last and|
+|gcnew|	新生代行为统计。Statistics of the behavior of the new generation.|
+|gcnewcapacity|	新生代与其相应的内存空间的统计。Statistics of the sizes of the new generations and its corresponding spaces.|
+|gcold	|年老代和永生代行为统计。Statistics of the behavior of the old and permanent generations.|
+|gcoldcapacity	|年老代行为统计。Statistics of the sizes of the old generation.|
+|gcpermcapacity	|永生代行为统计。Statistics of the sizes of the permanent generation.|
+|printcompilation	|HotSpot编译方法统计。HotSpot compilation method statistics.|
+
+### option 参数详解
+-class
+
+监视类装载、卸载数量、总空间以及耗费的时间
+```js
+$ jstat -class 11589
+ Loaded  Bytes  Unloaded  Bytes     Time   
+  7035  14506.3     0     0.0       3.67
+```
+- Loaded : 加载class的数量
+- Bytes : class字节大小
+- Unloaded : 未加载class的数量
+- Bytes : 未加载class的字节大小
+- Time : 加载时间
+
+
+-gc
+
+垃圾回收堆的行为统计，常用命令
+```js
+$ jstat -gc 1262
+ S0C    S1C     S0U     S1U   EC       EU        OC         OU        PC       PU         YGC    YGCT    FGC    FGCT     GCT   
+26112.0 24064.0 6562.5  0.0   564224.0 76274.5   434176.0   388518.3  524288.0 42724.7    320    6.417   1      0.398    6.815
+```
+C即Capacity 总容量，U即Used 已使用的容量
+
+- S0C : survivor0区的总容量
+- S1C : survivor1区的总容量
+- S0U : survivor0区已使用的容量
+- S1C : survivor1区已使用的容量
+- EC : Eden区的总容量
+- EU : Eden区已使用的容量
+- OC : Old区的总容量
+- OU : Old区已使用的容量
+- PC 当前perm的容量 (KB)
+- PU perm的使用 (KB)
+- YGC : 新生代垃圾回收次数
+- YGCT : 新生代垃圾回收时间
+- FGC : 老年代垃圾回收次数
+- FGCT : 老年代垃圾回收时间
+- GCT : 垃圾回收总消耗时间
+  
+```js
+$ jstat -gc 1262 2000 20
+```
+这个命令意思就是每隔2000ms输出1262的gc情况，一共输出20次
+
+
+## jmap
+jmap(JVM Memory Map)命令用于生成heap dump文件<font size=4 color = "green">（在故障定位(尤其是OOM)和性能分析的时候，经常会用到一些文件辅助我们排除代码问题。 这些文件记录了JVM运行期间的内存占用、线程执行等情况，这就是我们常说的dump文件）</font>，如果不使用这个命令，还阔以使用-XX:+HeapDumpOnOutOfMemoryError参数来让虚拟机出现OOM的时候·自动生成dump文件。
+jmap不仅能生成dump文件，还阔以查询finalize执行队列、Java堆和永久代的详细信息，如当前使用率、当前使用的是哪种收集器等。
+
+### 命令格式
+jmap [option] LVMID
+
+### option参数
+
+- dump : 生成堆转储快照
+- finalizerinfo : 显示在F-Queue队列等待Finalizer线程执行finalizer方法的对象
+- heap : 显示Java堆详细信息
+- histo : 显示堆中对象的统计信息
+- permstat : to print permanent generation statistics
+- F : 当-dump没有响应时，强制生成dump快照
+
+### 示例
+-dump
+
+常用格式
+```
+-dump::live,format=b,file=<filename> pid 
+```
+
+dump堆到文件,format指定输出格式，live指明是活着的对象,file指定文件名
+
+```
+$ jmap -dump:live,format=b,file=dump.hprof 28920
+  Dumping heap to /home/xxx/dump.hprof ...
+  Heap dump file created
+```
+dump.hprof这个后缀是为了后续可以直接用MAT(Memory Anlysis Tool)打开。
+
+
+-heap
+
+打印heap的概要信息，GC使用的算法，heap的配置及wise heap的使用情况,可以用此来判断内存目前的使用情况以及垃圾回收情况
+
+```js
+$ jmap -heap 28920
+  Attaching to process ID 28920, please wait...
+  Debugger attached successfully.
+  Server compiler detected.
+  JVM version is 24.71-b01  
+
+  using thread-local object allocation.
+  Parallel GC with 4 thread(s)//GC 方式  
+
+  Heap Configuration: //堆内存初始化配置
+     MinHeapFreeRatio = 0 //对应jvm启动参数-XX:MinHeapFreeRatio设置JVM堆最小空闲比率(default 40)
+     MaxHeapFreeRatio = 100 //对应jvm启动参数 -XX:MaxHeapFreeRatio设置JVM堆最大空闲比率(default 70)
+     MaxHeapSize      = 2082471936 (1986.0MB) //对应jvm启动参数-XX:MaxHeapSize=设置JVM堆的最大大小
+     NewSize          = 1310720 (1.25MB)//对应jvm启动参数-XX:NewSize=设置JVM堆的‘新生代’的默认大小
+     MaxNewSize       = 17592186044415 MB//对应jvm启动参数-XX:MaxNewSize=设置JVM堆的‘新生代’的最大大小
+     OldSize          = 5439488 (5.1875MB)//对应jvm启动参数-XX:OldSize=<value>:设置JVM堆的‘老生代’的大小
+     NewRatio         = 2 //对应jvm启动参数-XX:NewRatio=:‘新生代’和‘老生代’的大小比率
+     SurvivorRatio    = 8 //对应jvm启动参数-XX:SurvivorRatio=设置年轻代中Eden区与Survivor区的大小比值 
+     PermSize         = 21757952 (20.75MB)  //对应jvm启动参数-XX:PermSize=<value>:设置JVM堆的‘永生代’的初始大小
+     MaxPermSize      = 85983232 (82.0MB)//对应jvm启动参数-XX:MaxPermSize=<value>:设置JVM堆的‘永生代’的最大大小
+     G1HeapRegionSize = 0 (0.0MB)  
+
+  Heap Usage://堆内存使用情况
+  PS Young Generation
+  Eden Space://Eden区内存分布
+     capacity = 33030144 (31.5MB)//Eden区总容量
+     used     = 1524040 (1.4534378051757812MB)  //Eden区已使用
+     free     = 31506104 (30.04656219482422MB)  //Eden区剩余容量
+     4.614088270399305% used //Eden区使用比率
+  From Space:  //其中一个Survivor区的内存分布
+     capacity = 5242880 (5.0MB)
+     used     = 0 (0.0MB)
+     free     = 5242880 (5.0MB)
+     0.0% used
+  To Space:  //另一个Survivor区的内存分布
+     capacity = 5242880 (5.0MB)
+     used     = 0 (0.0MB)
+     free     = 5242880 (5.0MB)
+     0.0% used
+  PS Old Generation //当前的Old区内存分布
+     capacity = 86507520 (82.5MB)
+     used     = 0 (0.0MB)
+     free     = 86507520 (82.5MB)
+     0.0% used
+  PS Perm Generation//当前的 “永生代” 内存分布
+     capacity = 22020096 (21.0MB)
+     used     = 2496528 (2.3808746337890625MB)
+     free     = 19523568 (18.619125366210938MB)
+     11.337498256138392% used  
+
+  670 interned Strings occupying 43720 bytes.
+```
+
+
+
+## jstack
+jstack用于生成java虚拟机当前时刻的线程快照。线程快照是当前java虚拟机内每一条线程正在执行的方法堆栈的集合，生成线程快照的主要目的是定位线程出现长时间停顿的原因，如线程间死锁、死循环、请求外部资源导致的长时间等待等。 线程出现停顿的时候通过jstack来查看各个线程的调用堆栈，就可以知道没有响应的线程到底在后台做什么事情，或者等待什么资源。 如果java程序崩溃生成core文件，jstack工具可以用来获得core文件的java stack和native stack的信息，从而可以轻松地知道java程序是如何崩溃和在程序何处发生问题。另外，jstack工具还可以附属到正在运行的java程序中，看到当时运行的java程序的java stack和native stack的信息, 如果现在运行的java程序呈现hung的状态，jstack是非常有用的。
+
+### 命令格式
+jstack [option] LVMID
+
+### option参数
+
+- F : 当正常输出请求不被响应时，强制输出线程堆栈
+- l : 除堆栈外，显示关于锁的附加信息
+- m : 如果调用到本地方法的话，可以显示C/C++的堆栈
+
+### 示例
+
+```js
+$ jstack -l 11494|more
+2016-07-28 13:40:04
+Full thread dump Java HotSpot(TM) 64-Bit Server VM (24.71-b01 mixed mode):
+
+"Attach Listener" daemon prio=10 tid=0x00007febb0002000 nid=0x6b6f waiting on condition [0x0000000000000000]
+   java.lang.Thread.State: RUNNABLE
+
+   Locked ownable synchronizers:
+        - None
+
+"http-bio-8005-exec-2" daemon prio=10 tid=0x00007feb94028000 nid=0x7b8c waiting on condition [0x00007fea8f56e000]
+   java.lang.Thread.State: WAITING (parking)
+        at sun.misc.Unsafe.park(Native Method)
+        - parking to wait for  <0x00000000cae09b80> (a java.util.concurrent.locks.AbstractQueuedSynchronizer$ConditionObject)
+        at java.util.concurrent.locks.LockSupport.park(LockSupport.java:186)
+        at java.util.concurrent.locks.AbstractQueuedSynchronizer$ConditionObject.await(AbstractQueuedSynchronizer.java:2043)
+        at java.util.concurrent.LinkedBlockingQueue.take(LinkedBlockingQueue.java:442)
+        at org.apache.tomcat.util.threads.TaskQueue.take(TaskQueue.java:104)
+        at org.apache.tomcat.util.threads.TaskQueue.take(TaskQueue.java:32)
+        at java.util.concurrent.ThreadPoolExecutor.getTask(ThreadPoolExecutor.java:1068)
+        at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
+        at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:615)
+        at org.apache.tomcat.util.threads.TaskThread$WrappingRunnable.run(TaskThread.java:61)
+        at java.lang.Thread.run(Thread.java:745)
+
+   Locked ownable synchronizers:
+        - None
+      .....
+```
